feat(integrations): add support for vimeo (#2271)
## Describe your changes

- Added configuration for vimeo and vimeo-basic in providers.yaml
- Added vimeo to docs-v2.
- Added vimeo pages for Supported API groups in mint.json.
- Added vimeo and vimeo-basic SVG file in template-logos folder.
- Consolidate vimeo docs pages

## Issue ticket number and link
[EXT-79](https://linear.app/nango/issue/EXT-79/add-support-for-vimeo)
## Test
This provider has been used successfully in local development to connect
to vimeo and vimeo-basic after authorizing using Nango. The
documentation update was reviewed using `npm run docs` and verifying on
localhost.

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -2546,6 +2546,31 @@ uber:
 unauthenticated:
     auth_mode: NONE
     docs: https://docs.nango.dev/integrations/overview
+vimeo:
+    categories:
+        - video
+    auth_mode: OAUTH2
+    authorization_url: https://api.vimeo.com/oauth/authorize
+    token_url: https://api.vimeo.com/oauth/access_token
+    token_request_auth_method: basic
+    scope_seprator: ' '
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    proxy:
+        base_url: https://api.vimeo.com
+    docs: https://docs.nango.dev/integrations/all/vimeo
+vimeo-basic:
+    categories:
+        - video
+    auth_mode: BASIC
+    proxy:
+        base_url: https://api.vimeo.com
+        verification:
+            method: GET
+            endpoint: /
+    docs: https://docs.nango.dev/integrations/all/vimeo
 wakatime:
     categories:
         - analytics
