[nan-1106] fix tests

--- a/packages/cli/fixtures/nango-yaml/v2/relative-imports/nango.yaml
+++ b/packages/cli/fixtures/nango-yaml/v2/relative-imports/nango.yaml
@@ -1,11 +1,12 @@
 integrations:
     github:
-        syncs:
-            main:
-                endpoint: /github/main
-                sync_type: incremental
+        actions:
+            issues:
                 output: Issue
+                endpoint: /github/issue
 
 models:
+    Contact:
+        id: string
     Issue:
         id: string
