--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,6 +28,7 @@
         "@babel/types": "^7.22.5",
         "@inquirer/prompts": "^2.3.0",
         "@nangohq/shared": "^0.39.33",
+        "@swc/core": "^1.5.25",
         "ajv": "^8.12.0",
         "ajv-errors": "^3.0.0",
         "axios": "^1.2.0",
