--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
         "dw": "npm run dev:watch",
         "dwa": "npm run dev:watch:apps",
         "test": "concurrently --kill-others \"npm run test:unit\" \"npm run test:integration\"",
-        "test:unit": "concurrently --kill-others \"vitest\" \"npm run test:cli\"",
+        "test:unit": "vitest",
         "test:integration": "vitest --config ./vite.integration.config.ts",
         "test:cli": "vitest --config ./vite.cli.config.ts",
         "docs": "cd ./docs-v2 && npx mintlify dev --port 3033",
