--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -31,7 +31,7 @@ jobs:
 
             - run: npm run build:hosted
             - run: npm run test:unit
-            - run: nom run test:cli
+            - run: npm run test:cli
             - run: npm run test:integration
 
             - name: Make sure flows.yaml is compiled
