feat(webhooks): [nan-1063] webhook on refresh error and slack notification (#2254)
## Describe your changes
Add in webhook and slack delivery for connection refresh error and for
slack refresh resolution.

## Additional Work
- Add in a dedicated `webhooks` package which required a lot of type
movement which bloated this PR a bit. Add in additional refresh success
and error hooks to be able to consolidate logic in one place.

## Issue ticket number and link
NAN-1063

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "packages/utils",
         "packages/data-ingestion",
         "packages/types",
-        "packages/database"
+        "packages/database",
+        "packages/webhooks"
     ],
     "scripts": {
         "create:migration": "cd packages/database/lib && knex migrate:make $1 --esm --knexfile ./knexfile.cjs",
