--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -12,6 +12,9 @@
             "path": "../logs"
         },
         {
+            "path": "../webhooks"
+        },
+        {
             "path": "../shared"
         },
         {
