--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -30,6 +30,7 @@
         "@nangohq/records": "file:../records",
         "@nangohq/shared": "file:../shared",
         "@nangohq/types": "^0.39.33",
+        "@nangohq/webhooks": "file:../webhooks",
         "@nangohq/utils": "file:../utils",
         "@workos-inc/node": "^6.2.0",
         "axios": "^1.3.4",
