--- a/package.json
+++ b/package.json
@@ -77,12 +77,12 @@
         "eslint-plugin-react": "7.33.2",
         "eslint-plugin-react-hooks": "4.6.0",
         "git-cliff": "2.2.1",
-        "husky": "^8.0.3",
+        "husky": "8.0.3",
         "js-yaml": "4.1.0",
         "lint-staged": "15.2.2",
-        "onchange": "^7.1.0",
+        "onchange": "7.1.0",
         "prettier": "3.2.5",
-        "rimraf": "^5.0.1",
+        "rimraf": "5.0.1",
         "testcontainers": "^9.12.0",
         "tsx": "^4.6.2",
         "typescript": "5.3.3",
