--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1164,11 +1164,10 @@ insightly:
 instantly:
     categories:
         - marketing
+        - communication
     auth_mode: API_KEY
     proxy:
-        base_url: https://api.instantly.ai/
-        headers:
-            api_key: ${apiKey}
+        base_url: https://api.instantly.ai/api
     docs: https://docs.nango.dev/integrations/all/instantly
 instagram:
     categories:
