--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -1311,6 +1311,20 @@ integrations:
                 first_name: string
                 last_name: string
                 email: string
+    instantly:
+        actions:
+            set-campaign-name:
+                output: InstantlySetCampaignNameResponse
+                input: InstantlySetCampaignNameInput
+                description: |
+                    Action to set a campaign name
+                endpoint: POST /instantly/set-campaign-name
+        models:
+            InstantlySetCampaignNameResponse:
+                status: string
+            InstantlySetCampaignNameInput:
+                campaign_id: string
+                name: string
     intercom:
         syncs:
             conversations:
