[nan-1064] add webhooks to build

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -21,6 +21,9 @@
             "path": "../utils"
         },
         {
+            "path": "../webhooks"
+        },
+        {
             "path": "../records"
         },
         {
