feat(integrations): add support for instantly api key (#2265)
## Describe your changes

- Adds support for instantly api key.
- Adds a simple set campaign name action script.

---------

Co-authored-by: Hassan_Wari <thebigstormtech@gmail.com>

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1161,6 +1161,14 @@ insightly:
             method: GET
             endpoint: /v3.1/Contacts
     docs: https://docs.nango.dev/integrations/all/insightly
+instantly:
+    categories:
+        - marketing
+        - communication
+    auth_mode: API_KEY
+    proxy:
+        base_url: https://api.instantly.ai/api
+    docs: https://docs.nango.dev/integrations/all/instantly
 instagram:
     categories:
         - marketing
