--- a/.dockerignore
+++ b/.dockerignore
@@ -8,14 +8,17 @@ npm-debug.log
 .git
 .github/
 .husky/
-docker-compose.yml
+docker-compose.yaml
 **/nango-data
 dev/
 docs-v2/
-tsconfig.tsbuildinfo
+**/tsconfig.tsbuildinfo
 integration-templates
-tests
+**/tests/
 assets/
 vite*.ts
 packages/cli/
+packages/frontend/
 scripts/
+cliff.toml
+.DS_Store
