feat(cli): [nan-1106] import relative files in syncs/actions (#2273)
## Describe your changes
Use tsup to import relative files in syncs. The error reporting with
tsup isn't as nice as ts-node so the tsup transpiles only and ts-node is
still used to type check and report nice errors. The result is actually
faster than previous. tsup doesn't transpile if there are any
compilation errors.

Note that an additional `vite.cli.config` file was added which doesn't
use threads because it was interfering with `tsup`

### Edge Cases Handled
- [x] If the main file imports another file which in turn imports
another file then all imported files should be typed checked and checked
to make sure [nango calls are used
correctly](https://github.com/NangoHQ/nango/blob/master/packages/cli/lib/services/parser.service.ts#L10)
- [x] If a library is imported like `crypto` we shouldn't try and type
check that file
- [x] If a tsconfig.json file exists in their repo it isn't used and the
one we want to use in the nango cli directory is instead used
- [x] Limit possible import files to be in the `nango-integrations`
directory
- [ ] Update to download the entire nango-integrations directory instead
of just the particular file (v2)
- [ ] Verify that changing the transpiled code doesn't produce different
results the ts-node transpilation

## Issue ticket number and link
NAN-1106

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [x] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -27,7 +27,7 @@
         "@babel/traverse": "^7.22.5",
         "@babel/types": "^7.22.5",
         "@nangohq/shared": "^0.39.33",
-        "@vercel/ncc": "^0.36.1",
+        "@swc/core": "^1.5.25",
         "ajv": "^8.12.0",
         "ajv-errors": "^3.0.0",
         "axios": "^1.2.0",
@@ -47,6 +47,7 @@
         "promptly": "^3.2.0",
         "semver": "^7.5.2",
         "ts-node": "^10.9.1",
+        "tsup": "^8.1.0",
         "typescript": "^5.3.3",
         "vm": "^0.1.0",
         "zod": "^3.22.4"
