feat(webhooks): [nan 1064] webhook on sync error (#2281)
## Describe your changes
Add in logic to send webhooks on sync failure

## Issue ticket number and link
NAN-1064

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -59,6 +59,7 @@
         "@nangohq/nango-orchestrator": "file:../orchestrator",
         "@nangohq/records": "file:../records",
         "@nangohq/types": "^0.39.33",
+        "@nangohq/webhooks": "file:../webhooks",
         "@sentry/types": "7.112.2",
         "@temporalio/activity": "^1.9.1",
         "@types/braintree": "^3.3.12",
