--- a/integration-templates/google-mail/nango.yaml
+++ b/integration-templates/google-mail/nango.yaml
@@ -1,37 +1,42 @@
 integrations:
-    google-mail:
-        syncs:
-            emails:
-                runs: every hour
-                description: |
-                    Fetches a list of emails from gmail
-                output: GmailEmail
-                sync_type: incremental
-                endpoint: /google-mail/emails
-        actions:
-            send-email:
-                scopes: send
-                input: GmailEmailInput
-                output: GmailEmailSentOutput
-                endpoint: POST /google-mail/send
-                description: |
-                    Send an Email using Gmail.
+  google-mail:
+    syncs:
+      emails:
+        runs: every hour
+        description: |
+          Fetches a list of emails from gmail
+        output: GmailEmail
+        sync_type: incremental
+        endpoint: /google-mail/emails
+    actions:
+      send-email:
+        scopes: send
+        input: GmailEmailInput
+        output: GmailEmailSentOutput
+        endpoint: POST /google-mail/send
+        description: |
+          Send an Email using Gmail.
 models:
-    GmailEmail:
-        id: string
-        sender: string
-        recipients: string
-        date: date
-        subject: string
-        body: string
-        threadId: string
+  GmailEmail:
+    id: string
+    sender: string
+    recipients: string
+    date: date
+    subject: string
+    body: string
+    threadId: string
+  
+  GmailEmailInput:
+    from: string
+    to: string
+    headers: object
+    subject: string
+    body: string
 
-    GmailEmailInput:
-        from: string
-        to: string
-        subject: string
-        body: string
+  EmailHeader:
+    headerName: string
+    headerValue: string
 
-    GmailEmailSentOutput:
-        id: string
-        threadId: string
+  GmailEmailSentOutput:
+    id: string
+    threadId: string
