fix(docker): stop compiling persist, autocompile tsconfig.docker.json (#2286)
## Describe your changes

- Stop compiling docker image for Persist, it's not used anymore
- Auto compile tsconfig.docker.json so it's one less thing to maintain
- Ignore more stuff in the dockerfile

--- a/.dockerignore
+++ b/.dockerignore
@@ -8,14 +8,16 @@ npm-debug.log
 .git
 .github/
 .husky/
-docker-compose.yml
+docker-compose.yaml
 **/nango-data
 dev/
 docs-v2/
-tsconfig.tsbuildinfo
+**/tsconfig.tsbuildinfo
 integration-templates
-tests
+**/tests/
 assets/
 vite*.ts
 packages/cli/
 scripts/
+cliff.toml
+.DS_Store
