--- a/packages/cli/fixtures/nango-yaml/v2/nested-integrations/nango.yaml
+++ b/packages/cli/fixtures/nango-yaml/v2/nested-integrations/nango.yaml
@@ -2,21 +2,21 @@ integrations:
     hubspot:
         syncs:
             contacts:
-                endpoint: /hubspot/contacts
+                endpoint: GET /hubspot/contacts
                 sync_type: incremental
                 output: Contact
         actions:
             create-contact:
-                endpoint: /hubspot/contact
+                endpoint: POST /hubspot/contact
     github:
         syncs:
             issues:
-                endpoint: /github/issues
+                endpoint: GET /github/issues
                 sync_type: incremental
                 output: Issue
         actions:
             create-issue:
-                endpoint: /github/issue
+                endpoint: POST /github/issue
 
 models:
     Contact:
