--- a/packages/cli/fixtures/nango-yaml/v2/relative-imports/nango.yaml
+++ b/packages/cli/fixtures/nango-yaml/v2/relative-imports/nango.yaml
@@ -3,7 +3,7 @@ integrations:
         actions:
             issues:
                 output: Issue
-                endpoint: GET /github/issue
+                endpoint: /github/issue
 
 models:
     Contact:
