--- a/packages/cli/fixtures/nango-yaml/v2/valid/nango.yaml
+++ b/packages/cli/fixtures/nango-yaml/v2/valid/nango.yaml
@@ -7,7 +7,7 @@ integrations:
                 sync_type: incremental
                 auto_start: true
                 runs: every half hour
-                endpoint: GET /ticketing/tickets
+                endpoint: DELETE /ticketing/tickets
                 scopes: public_repo
                 output: GithubIssue
                 webhook-subscriptions:
@@ -18,7 +18,7 @@ integrations:
                 sync_type: incremental
                 auto_start: true
                 runs: every hour
-                endpoint: GET /ticketing/tickets-two
+                endpoint: /ticketing/tickets-two
                 scopes: public_repo
                 output: GithubIssue2
             github-multiple-models:
@@ -27,8 +27,8 @@ integrations:
                 auto_start: true
                 runs: every 5 minutes
                 endpoint:
-                    - GET /ticketing/ticket
-                    - GET /ticketing/pr
+                    - /ticketing/ticket
+                    - /ticketing/pr
                 output:
                     - GithubIssue3
                     - GithubPR
@@ -40,7 +40,7 @@ integrations:
                 scopes: repo:read
             github-create-issue:
                 description: Creates a GitHub issue.
-                endpoint: POST /ticketing/tickets
+                endpoint: /ticketing/tickets
                 scopes: repo:write
                 input: GithubCreateIssueInput
                 output: GithubCreateOutput
