--- a/packages/jobs/tsconfig.json
+++ b/packages/jobs/tsconfig.json
@@ -15,6 +15,9 @@
             "path": "../logs"
         },
         {
+            "path": "../webhooks"
+        },
+        {
             "path": "../shared"
         },
         {
