--- a/.eslintrc
+++ b/.eslintrc
@@ -128,6 +128,14 @@
         },
         {
             "files": [
+                "packages/cli/**/*.ts"
+            ],
+            "rules": {
+                "no-console": 0,
+            }
+        },
+        {
+            "files": [
                 "packages/frontend/**/*.ts"
             ],
             "env": {
