--- a/.eslintrc
+++ b/.eslintrc
@@ -34,8 +34,8 @@
         "plugin:import/recommended"
     ],
     "rules": {
-        "no-console": 1, // Means warning
-        "prettier/prettier": 2,
+        "no-console": "warn",
+        "prettier/prettier": "error",
         "@typescript-eslint/no-inferrable-types": "off",
         // Previously warn but now errors
         "@typescript-eslint/no-non-null-assertion": "warn",
@@ -124,14 +124,6 @@
                 "no-constant-condition": "off",
                 "@typescript-eslint/no-dynamic-delete": "off",
                 "@typescript-eslint/no-redundant-type-constituents": "off"
-            }
-        },
-        {
-            "files": [
-                "packages/cli/**/*.ts"
-            ],
-            "rules": {
-                "no-console": 0,
             }
         },
         {
