--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
         "watch:dev:apps": "npm run dev:watch:apps",
         "dw": "npm run dev:watch",
         "dwa": "npm run dev:watch:apps",
-        "test": "concurrently --kill-others \"npm run test:unit\" \"npm run test:integration\"",
+        "test": "concurrently --kill-others \"npm run test:unit\" \"npm run test:integration\" \"npm run test:cli\"",
         "test:unit": "vitest",
         "test:integration": "vitest --config ./vite.integration.config.ts",
         "test:cli": "vitest --config ./vite.cli.config.ts",
