--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -26,6 +26,9 @@
             "path": "packages/node-client"
         },
         {
+            "path": "packages/nango-yaml"
+        },
+        {
             "path": "packages/persist"
         },
         {
