--- a/packages/cli/fixtures/nango-yaml/v2/non-nested-integrations/nango.yaml
+++ b/packages/cli/fixtures/nango-yaml/v2/non-nested-integrations/nango.yaml
@@ -4,6 +4,7 @@ integrations:
             contacts:
                 endpoint: GET /hubspot/contacts
                 sync_type: incremental
+                runs: every day
                 output: Contact
         actions:
             create-contact:
@@ -13,6 +14,7 @@ integrations:
             issues:
                 endpoint: GET /github/issues
                 sync_type: incremental
+                runs: every day
                 output: Issue
         actions:
             create-issue:
