--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,8 +24,8 @@
         "@babel/parser": "^7.22.5",
         "@babel/traverse": "^7.22.5",
         "@babel/types": "^7.22.5",
-        "@nangohq/shared": "^0.40.0",
         "@nangohq/nango-yaml": "^0.40.0",
+        "@nangohq/shared": "^0.40.0",
         "@swc/core": "^1.5.25",
         "ajv": "^8.12.0",
         "ajv-errors": "^3.0.0",
@@ -67,6 +67,7 @@
         "@types/promptly": "^3.0.2",
         "babel-loader": "^9.1.2",
         "esbuild": "^0.17.19",
+        "strip-ansi": "7.1.0",
         "vitest": "^0.33.0",
         "webpack": "^5.85.1",
         "webpack-cli": "^5.1.3",
