--- a/packages/node-client/package.json
+++ b/packages/node-client/package.json
@@ -36,6 +36,7 @@
         "README.md"
     ],
     "devDependencies": {
+        "@nangohq/types": "^0.40.0",
         "tsup": "^8.0.2",
         "vitest": "^0.33.0"
     }
